--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <table>
                 <tr>
                     <th>Product</th>
-                    <td>Oval Bowl</td>
+                    <td>Hook</td>
                 </tr>
                 <tr>
                     <th>Product Code</th>
